clusters/quantika/apps/plex/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          ports:
            - containerPort: 32400
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: plex-media-pvc
