clusters/quantika/apps/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  selector:
    app: plex
  type: NodePort
  ports:
    - port: 32400
      targetPort: web
      nodePort: 32400
      protocol: TCP
